# rdv_real_robot

./: CMakeLists.txt  package.xml
launch/: launch_application_liosam.launch  launch_application_navigation.launch  launch_application_temp.launch
rviz/: display_mlbot_rb5.rviz  mlbot_rb5.rviz  mlbot_rb5_multi.rviz
scripts/: mlbot_pose.py
urdf/: mlbot_rb5.gazebo.xacro
